add location mapping

--- a/config/city_mapping.yaml
+++ b/config/city_mapping.yaml
@@ -136,15 +136,211 @@ city_isp_database:
     "移动": ["120.39.32.0/24", "117.28.32.0/24", "223.104.88.0/24", "183.207.240.0/24"]
     "教育网": ["202.38.224.0/24", "210.34.32.0/24", "202.201.176.0/24"]
 
+  # 华中地区
+  "成都":
+    "电信": ["61.139.0.0/24", "218.6.128.0/24", "125.69.16.0/24", "171.210.0.0/24"]
+    "联通": ["119.6.144.0/24", "124.161.0.0/24", "182.135.0.0/24", "221.7.128.0/24"]
+    "移动": ["183.221.0.0/24", "218.201.0.0/24", "223.87.0.0/24", "117.136.128.0/24"]
+    "教育网": ["202.115.0.0/24", "210.41.128.0/24", "222.197.128.0/24"]
+    
+  "武汉":
+    "电信": ["59.172.0.0/24", "118.212.0.0/24", "125.45.0.0/24", "175.44.0.0/24"]
+    "联通": ["113.57.0.0/24", "125.46.0.0/24", "210.22.32.0/24", "221.235.0.0/24"]
+    "移动": ["111.0.128.0/24", "120.204.64.0/24", "183.249.0.0/24", "223.104.64.0/24"]
+    "教育网": ["202.114.0.0/24", "210.42.128.0/24", "219.140.128.0/24"]
+    
+  "西安":
+    "电信": ["116.255.128.0/24", "117.35.0.0/24", "124.115.0.0/24", "175.42.0.0/24"]
+    "联通": ["113.200.128.0/24", "125.76.0.0/24", "221.11.0.0/24", "125.41.128.0/24"]
+    "移动": ["117.33.0.0/24", "120.204.128.0/24", "183.230.0.0/24", "223.104.192.0/24"]
+    "教育网": ["202.117.0.0/24", "210.27.0.0/24", "218.195.0.0/24"]
+    
+  "重庆":
+    "电信": ["113.204.0.0/24", "125.85.0.0/24", "183.230.128.0/24", "175.155.0.0/24"]
+    "联通": ["113.205.0.0/24", "125.86.0.0/24", "221.182.0.0/24", "140.75.128.0/24"]
+    "移动": ["111.205.0.0/24", "117.131.128.0/24", "183.230.192.0/24", "223.104.128.0/24"]
+    "教育网": ["202.202.0.0/24", "210.41.0.0/24", "218.194.0.0/24"]
+    
+  "天津":
+    "电信": ["117.8.0.0/24", "124.200.0.0/24", "175.156.0.0/24", "219.148.0.0/24"]
+    "联通": ["125.39.0.0/24", "140.206.0.0/24", "202.99.0.0/24", "221.238.0.0/24"]
+    "移动": ["111.160.0.0/24", "117.131.64.0/24", "183.199.0.0/24", "223.87.128.0/24"]
+    "教育网": ["202.113.0.0/24", "210.25.128.0/24", "219.216.0.0/24"]
+
+  # 东北地区  
+  "沈阳":
+    "电信": ["117.32.0.0/24", "124.95.128.0/24", "175.163.0.0/24", "218.25.0.0/24"]
+    "联通": ["125.33.0.0/24", "140.75.192.0/24", "202.96.128.0/24", "221.12.0.0/24"]
+    "移动": ["111.0.64.0/24", "117.136.160.0/24", "183.207.0.0/24", "223.100.0.0/24"]
+    "教育网": ["202.199.0.0/24", "210.30.128.0/24", "219.216.128.0/24"]
+    
+  "长春":
+    "电信": ["124.95.0.0/24", "175.167.0.0/24", "218.62.0.0/24", "222.161.0.0/24"]
+    "联通": ["125.32.0.0/24", "140.205.0.0/24", "202.98.0.0/24", "221.8.0.0/24"]
+    "移动": ["111.26.0.0/24", "117.136.192.0/24", "183.207.128.0/24", "223.100.128.0/24"]
+    "教育网": ["202.198.0.0/24", "210.46.0.0/24", "219.217.0.0/24"]
+    
+  "哈尔滨":
+    "电信": ["125.211.0.0/24", "175.168.0.0/24", "218.7.0.0/24", "222.171.0.0/24"]
+    "联通": ["125.31.0.0/24", "140.204.0.0/24", "202.97.0.0/24", "221.207.0.0/24"]
+    "移动": ["111.40.0.0/24", "117.136.224.0/24", "183.207.160.0/24", "223.100.64.0/24"]
+    "教育网": ["202.118.0.0/24", "210.46.128.0/24", "219.217.128.0/24"]
+
+  # 华东地区
+  "济南":
+    "电信": ["60.216.0.0/24", "116.254.128.0/24", "124.131.0.0/24", "175.140.0.0/24"]
+    "联通": ["113.128.0.0/24", "125.71.0.0/24", "140.207.224.0/24", "221.2.0.0/24"]
+    "移动": ["111.161.0.0/24", "117.156.0.0/24", "183.253.0.0/24", "223.99.0.0/24"]
+    "教育网": ["202.194.0.0/24", "210.44.128.0/24", "219.214.0.0/24"]
+    
+  "青岛":
+    "电信": ["60.217.0.0/24", "116.253.0.0/24", "124.134.0.0/24", "175.141.0.0/24"]
+    "联通": ["113.131.0.0/24", "125.70.0.0/24", "140.206.128.0/24", "221.0.0.0/24"]
+    "移动": ["111.162.0.0/24", "117.157.0.0/24", "183.252.0.0/24", "223.99.128.0/24"]
+    "教育网": ["202.194.128.0/24", "210.44.0.0/24", "219.214.128.0/24"]
+
+  # 华中地区
+  "郑州":
+    "电信": ["61.168.0.0/24", "115.60.0.0/24", "124.166.0.0/24", "175.8.0.0/24"]
+    "联通": ["113.207.0.0/24", "125.47.0.0/24", "140.206.64.0/24", "221.15.0.0/24"]
+    "移动": ["111.7.0.0/24", "117.158.0.0/24", "183.54.0.0/24", "223.99.64.0/24"]
+    "教育网": ["202.196.0.0/24", "210.43.0.0/24", "219.215.0.0/24"]
+    
+  "长沙":
+    "电信": ["61.187.0.0/24", "118.250.0.0/24", "124.232.0.0/24", "175.6.0.0/24"]
+    "联通": ["113.246.0.0/24", "125.44.0.0/24", "140.206.192.0/24", "221.228.0.0/24"]
+    "移动": ["111.21.0.0/24", "117.159.0.0/24", "183.55.0.0/24", "223.151.0.0/24"]
+    "教育网": ["202.197.0.0/24", "210.43.128.0/24", "219.215.128.0/24"]
+
+  # 华北地区
+  "太原":
+    "电信": ["59.172.128.0/24", "117.25.0.0/24", "124.167.0.0/24", "175.20.0.0/24"]
+    "联通": ["113.208.0.0/24", "125.34.0.0/24", "140.75.0.0/24", "221.204.0.0/24"]
+    "移动": ["111.53.0.0/24", "117.160.0.0/24", "183.56.0.0/24", "223.152.0.0/24"]
+    "教育网": ["202.207.0.0/24", "210.29.0.0/24", "219.218.0.0/24"]
+    
+  "石家庄":
+    "电信": ["59.52.0.0/24", "117.21.0.0/24", "124.239.0.0/24", "175.21.0.0/24"]
+    "联通": ["113.206.0.0/24", "125.35.0.0/24", "140.75.32.0/24", "221.192.0.0/24"]
+    "移动": ["111.62.0.0/24", "117.161.0.0/24", "183.57.0.0/24", "223.153.0.0/24"]
+    "教育网": ["202.206.0.0/24", "210.29.128.0/24", "219.218.128.0/24"]
+
+  # 西北地区
+  "呼和浩特":
+    "电信": ["118.123.0.0/24", "124.119.0.0/24", "175.22.0.0/24", "222.74.0.0/24"]
+    "联通": ["113.203.0.0/24", "125.37.0.0/24", "140.75.64.0/24", "221.13.0.0/24"]
+    "移动": ["111.13.0.0/24", "117.162.0.0/24", "183.173.0.0/24", "223.154.0.0/24"]
+    "教育网": ["202.207.128.0/24", "210.31.0.0/24", "219.219.0.0/24"]
+    
+  "银川":
+    "电信": ["124.126.0.0/24", "175.23.0.0/24", "218.95.0.0/24", "222.75.0.0/24"]
+    "联通": ["113.202.0.0/24", "125.36.0.0/24", "140.75.96.0/24", "221.14.0.0/24"]
+    "移动": ["111.12.0.0/24", "117.163.0.0/24", "183.174.0.0/24", "223.155.0.0/24"]
+    "教育网": ["202.201.0.0/24", "210.31.128.0/24", "219.219.128.0/24"]
+    
+  "西宁":
+    "电信": ["36.99.0.0/24", "124.127.0.0/24", "175.24.0.0/24", "218.94.0.0/24"]
+    "联通": ["113.201.0.0/24", "125.72.0.0/24", "140.75.128.0/24", "221.207.128.0/24"]
+    "移动": ["111.11.0.0/24", "117.164.0.0/24", "183.175.0.0/24", "223.156.0.0/24"]
+    "教育网": ["202.201.128.0/24", "210.32.128.0/24", "219.220.0.0/24"]
+    
+  "乌鲁木齐":
+    "电信": ["124.117.0.0/24", "175.25.0.0/24", "218.78.0.0/24", "222.82.0.0/24"]
+    "联通": ["113.200.0.0/24", "125.73.0.0/24", "140.75.160.0/24", "221.232.0.0/24"]
+    "移动": ["111.10.0.0/24", "117.165.0.0/24", "183.176.0.0/24", "223.157.0.0/24"]
+    "教育网": ["202.201.224.0/24", "210.32.192.0/24", "219.220.128.0/24"]
+    
+  "拉萨":
+    "电信": ["125.34.128.0/24", "175.136.0.0/24", "218.93.0.0/24", "222.83.0.0/24"]
+    "联通": ["113.55.0.0/24", "125.74.0.0/24", "140.75.224.0/24", "221.13.128.0/24"]
+    "移动": ["111.9.0.0/24", "117.166.0.0/24", "183.177.0.0/24", "223.158.0.0/24"]
+    "教育网": ["202.207.224.0/24", "210.33.0.0/24", "219.221.0.0/24"]
+
+  # 西南地区
+  "昆明":
+    "电信": ["116.55.0.0/24", "125.75.0.0/24", "175.0.0.0/24", "222.172.0.0/24"]
+    "联通": ["113.54.0.0/24", "125.68.0.0/24", "221.3.0.0/24", "140.249.0.0/24"]
+    "移动": ["111.8.0.0/24", "117.167.0.0/24", "183.224.0.0/24", "223.13.0.0/24"]
+    "教育网": ["202.203.0.0/24", "210.40.0.0/24", "219.157.0.0/24"]
+    
+  "贵阳":
+    "电信": ["125.67.0.0/24", "175.1.0.0/24", "218.204.0.0/24", "222.173.0.0/24"]
+    "联通": ["113.53.0.0/24", "125.74.128.0/24", "221.12.128.0/24", "140.249.128.0/24"]
+    "移动": ["111.7.128.0/24", "117.168.0.0/24", "183.225.0.0/24", "223.14.0.0/24"]
+    "教育网": ["202.204.0.0/24", "210.40.128.0/24", "219.158.0.0/24"]
+
+  # 华南地区
+  "南宁":
+    "电信": ["116.7.0.0/24", "125.77.0.0/24", "175.2.0.0/24", "222.216.0.0/24"]
+    "联通": ["113.12.0.0/24", "125.217.0.0/24", "221.7.0.0/24", "140.237.0.0/24"]
+    "移动": ["111.24.0.0/24", "117.169.0.0/24", "183.226.0.0/24", "223.15.0.0/24"]
+    "教育网": ["202.203.128.0/24", "210.36.0.0/24", "219.159.0.0/24"]
+    
+  "海口":
+    "电信": ["116.24.0.0/24", "124.225.0.0/24", "175.5.0.0/24", "222.217.0.0/24"]
+    "联通": ["113.11.0.0/24", "125.216.0.0/24", "221.6.128.0/24", "140.237.128.0/24"]
+    "移动": ["111.73.0.0/24", "117.170.0.0/24", "183.227.0.0/24", "223.16.0.0/24"]
+    "教育网": ["202.202.128.0/24", "210.37.0.0/24", "219.160.0.0/24"]
+
+  # 华中华东地区
+  "南昌":
+    "电信": ["59.53.0.0/24", "117.40.0.0/24", "124.160.0.0/24", "175.11.0.0/24"]
+    "联通": ["113.251.0.0/24", "125.230.0.0/24", "140.249.192.0/24", "221.229.0.0/24"]
+    "移动": ["111.75.0.0/24", "117.171.0.0/24", "183.228.0.0/24", "223.17.0.0/24"]
+    "教育网": ["202.101.0.0/24", "210.35.0.0/24", "219.229.0.0/24"]
+    
+  "合肥":
+    "电信": ["60.173.0.0/24", "114.100.0.0/24", "124.161.128.0/24", "175.12.0.0/24"]
+    "联通": ["113.118.0.0/24", "125.231.0.0/24", "140.249.224.0/24", "221.230.0.0/24"]
+    "移动": ["111.76.0.0/24", "117.172.0.0/24", "183.229.0.0/24", "223.18.0.0/24"]
+    "教育网": ["202.38.0.0/24", "210.45.0.0/24", "219.230.0.0/24"]
+
 # 地区默认网段映射（当精确匹配失败时使用）
 regional_defaults:
+  # 华北地区
   "北京": "202.101.170.0/24"  # 电信北京
-  "天津": "202.101.170.0/24"  # 电信北京
+  "天津": "117.8.0.0/24"      # 电信天津
+  "河北": "59.52.0.0/24"      # 电信石家庄
+  "山西": "59.172.128.0/24"   # 电信太原
+  "内蒙古": "118.123.0.0/24"  # 电信呼和浩特
+  
+  # 华东地区
   "上海": "202.96.209.0/24"   # 电信上海
-  "广东": "183.232.231.0/24"  # 电信广州
-  "浙江": "115.236.101.0/24"  # 电信杭州
   "江苏": "180.101.49.0/24"   # 电信南京
+  "浙江": "115.236.101.0/24"  # 电信杭州
+  "安徽": "60.173.0.0/24"     # 电信合肥
   "福建": "27.155.96.0/24"    # 电信福州
+  "江西": "59.53.0.0/24"      # 电信南昌
+  "山东": "60.216.0.0/24"     # 电信济南
+  
+  # 华中地区
+  "河南": "61.168.0.0/24"     # 电信郑州
+  "湖北": "59.172.0.0/24"     # 电信武汉
+  "湖南": "61.187.0.0/24"     # 电信长沙
+  
+  # 华南地区
+  "广东": "183.232.231.0/24"  # 电信广州
+  "广西": "116.7.0.0/24"      # 电信南宁
+  "海南": "116.24.0.0/24"     # 电信海口
+  
+  # 西南地区
+  "四川": "61.139.0.0/24"     # 电信成都
+  "重庆": "113.204.0.0/24"    # 电信重庆
+  "贵州": "125.67.0.0/24"     # 电信贵阳
+  "云南": "116.55.0.0/24"     # 电信昆明
+  "西藏": "125.34.128.0/24"   # 电信拉萨
+  
+  # 西北地区
+  "陕西": "116.255.128.0/24"  # 电信西安
+  "甘肃": "36.99.0.0/24"      # 电信兰州 (通过西宁)
+  "青海": "36.99.0.0/24"      # 电信西宁
+  "宁夏": "124.126.0.0/24"    # 电信银川
+  "新疆": "124.117.0.0/24"    # 电信乌鲁木齐
+  
+  # 东北地区
+  "辽宁": "117.32.0.0/24"     # 电信沈阳
+  "吉林": "124.95.0.0/24"     # 电信长春
+  "黑龙江": "125.211.0.0/24"  # 电信哈尔滨
   
 # 运营商默认城市（当无法推导城市时使用）
 isp_default_cities:
