support config mirror github

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,7 @@
 subs:
-  - url: ""
+  - url: ""                                   # 你VPN订阅地址
     insecure: false                           # 是否跳过SSL验证
 dns:
   auto_optimize: true                         # 自动获取本地DNS和做CDN优化
+github:
+  mirror_url: "https://ghfast.top"            # GitHub镜像地址,用于加速，如 https://ghfast.top 或 https://mirror.ghproxy.com
